Services/service-externalname-Outside-Cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: sms
  namespace: prod
spec:
  type: ExternalName
  externalName: sms.gateway.com
